# os-lab4

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp  run.sh
server/: CMakeLists.txt  build.sh  client-handler.h  client-service.cpp  client-service.h  clients-db.h  db.cpp  db.h  db.sql  docker-compose.yaml  event-service.cpp  event-service.h  events-db.h  main.cpp  run.sh
shared/: pipe-message.cpp  pipe-message.h  utils.cpp  utils.h
